# thonny-code-theme

./: README.md  pyproject.toml
thonny_vscode.egg-info/: PKG-INFO  SOURCES.txt
thonnycontrib/code/: __init__.py
